[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "openai>=1.77.0",
    "trafilatura>=2.0.0",
    "matplotlib>=3.10.1",
    "wordcloud>=1.9.4",
    "nltk>=3.9.1",
    "anthropic>=0.50.0",
    "twilio>=9.5.2",
]
